--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <form class="searchbar">
                 <label for="searchbar">Search Jobs</label>
                 <input type="search" id="searchbar" class="searchbar-input-main" placeholder="Search software jobs">
-                <submit class="searchbar-btn"><img src="Images/magnifying-glass.png" alt="Magnifying glass image"></submit>
+                <button class="searchbar-btn"><img src="Images/magnifying-glass.png" alt="Magnifying glass image"></button>
             </form>
         
             <main>
